z-index fix

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -100,7 +100,7 @@ body {
     object-fit: cover;
     background-color: #03a9f4;
     background-color: rgb(58, 58, 58);
-    z-index: -5;
+    z-index: 1;
     mix-blend-mode: overlay;
   }
 
@@ -290,7 +290,7 @@ body {
   }
 
   .search-flex {
-    z-index: 1;
+    z-index: 5;
     form {
       border-bottom: 0.1px solid (rgba($color-primary-dark, 0.3));
       width: 80%;
@@ -330,7 +330,7 @@ body {
   .cities-flex {
     @include p-text($color-primary-dark, 1rem);
     gap: 2rem;
-    z-index: 1;
+    z-index: 5;
 
     .city {
       @include liststyle();
@@ -355,7 +355,7 @@ body {
   }
 
   .weather-details-flex {
-    z-index: 1;
+    z-index: 5;
     h3 {
       color: $color-primary;
       font-size: 1rem;
